Añadido  Edit profile y fix de campos en register